--- a/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Despacho - Solicitud";
     ViewBag.SeccionTieneTitulo = true;
     ViewBag.TituloSeccion = "Solicitudes de Despacho";
+    ViewBag.Pagina = 1;
 }
 
 <div class="m-portlet m-portlet--mobile">
