--- a/3 - Proyecto/Despacho/WebApp/Views/Usuario/Usuario.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Usuario/Usuario.cshtml
@@ -38,7 +38,7 @@
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.Password" id="password" style="width: 50%">
 				</div>
-				<label for="example-text-input" class="col-2 col-form-label">Contraseña</label>
+				<label for="example-text-input" class="col-2 col-form-label">Nombres</label>
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.Nombres" id="nombres" style="width: 50%">
 				</div>
@@ -58,13 +58,11 @@
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.PerfilId" id="perfilid" style="width: 50%">
 				</div>
-				<!--<label for="example-text-input" class="col-2 col-form-label">Cliente</label>
-	<div class="col-10">
-		<input class="form-control m-input" type="text" value="@Model.ClienteId" id="clienteid" style="width: 50%">
-	</div>
-		 -->
-			</div>
-
+				<label for="example-text-input" class="col-2 col-form-label">Cliente</label>
+				<div class="col-10">
+					<input class="form-control m-input" type="text" value="@Model.ClienteId" id="clienteid" style="width: 50%">
+				</div>
+		 	</div>
 		</div>
 		<div class="m-portlet__foot m-portlet__foot--fit">
 			<div class="m-form__actions">
