Me faaltan talas por Visualizar, no doy más

--- a/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
@@ -9,7 +9,8 @@
 }
 
 @section Scripts{
-  @Scripts.Render("~/bundles/gerencia")
+  <!--@Scripts.Render("~/bundles/gerencia")-->
+  <script type="text/javascript" src="~/Content/js/Gerencia.js"></script>
 }
 
 <div class="m-portlet m-portlet--mobile">
@@ -39,7 +40,7 @@
           </div>
         </div>
         <div class="col-xl-4 order-1 order-xl-2 m--align-right">
-          <a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+          <a href="/Gerencia/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
             <span>
               <i class="flaticon-add"></i>
               <span>Crear</span>
