--- a/3 - Proyecto/Despacho/WebApp/Views/Perfil/Perfil.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Perfil/Perfil.cshtml
@@ -20,6 +20,7 @@
 
 @section Scripts{
 	@Scripts.Render("~/bundles/perfil")
+	<!--<script type="text/javascript" src="~/Content/js/Perfil.js"></script>-->
 }
 
 <div class="m-portlet m-portlet--tab">
