--- a/3 - Proyecto/Despacho/WebApp/Views/Prioridad/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Prioridad/Index.cshtml
@@ -9,7 +9,8 @@
 }
 
 @section Scripts{
-	@Scripts.Render("~/bundles/prioridad")
+	<!--@Scripts.Render("~/bundles/prioridad")-->
+	<script type="text/javascript" src="~/Content/js/Prioridad.js"></script>
 }
 
 <div class="m-portlet m-portlet--mobile">
