--- a/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
@@ -9,7 +9,8 @@
 }
 
 @section Scripts{
-	@Scripts.Render("~/bundles/perfil")
+	<script type="text/javascript" src="~/Content/js/Perfil.js"></script>
+	<!--Scripts.Render("~/bundles/perfil")-->
 }
 
 <div class="m-portlet m-portlet--mobile">
@@ -39,7 +40,7 @@
 					</div>
 				</div>
 				<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-					<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+					<a href="/Perfil/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
 						<span>
 							<i class="flaticon-add"></i>
 							<span>Crear</span>
