Salgo del Proyecto

--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
@@ -19,7 +19,8 @@
 }
 
 @section Scripts{
-	@Scripts.Render("~/bundles/tiposolicitud")
+	<!--@Scripts.Render("~/bundles/tiposolicitud")-->
+	<script type="text/javascript" src="~/Content/js/TipoSolicitud.js">
 }
 
 <div class="m-portlet m-portlet--tab">
