--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
@@ -51,9 +51,9 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="listatiposdesolicitudes"></div>
+		<div class="m_datatable" id="listasolicitudes"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
 
-@Scripts.Render("~/bundles/tiposolicitud")
+<!--@Scripts.Render("~/bundles/tiposolicitud")-->
