--- a/3 - Proyecto/Despacho/WebApp/Content/less/general.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/general.less
@@ -19,3 +19,13 @@ body {
 .m-aside-menu .m-menu__nav > .m-menu__item .m-menu__submenu .m-menu__item > .m-menu__link .m-menu__link-bullet {
 	width: 35px !important;
 }
+
+#m_header_menu .m-menu__link-badge span {
+	background-color: #colores[claro]!important;
+	color: #colores[blanco]!important;
+}
+
+.m-badge.m-badge--claro {
+	background-color: #colores[claro]!important;
+	color: #colores[blanco]!important;
+}
