--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -301,7 +301,7 @@
 									<span class="m-menu__link-wrap">
 										<span class="m-menu__link-text">Solicitudes</span>
 										<span class="m-menu__link-badge">
-											<span class="m-badge m-badge--accent">3</span>
+											<span class="m-badge m-badge--claro">3</span>
 										</span>
 									</span>
 								</span>
