--- a/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
@@ -11,9 +11,8 @@
 
 @section Scripts {
 	<script src="~/Content/librerias/metronic/assets/themes/default/custom/crud/forms/widgets/select2.js" type="text/javascript"></script>
-	<script type="text/javascript" src="~/Content/js/Existencia.js"></script>
 }
-<div class="m-portlet m-portlet--primary m-portlet--head-solid-bg m-portlet--head-sm" m-portlet="true" id="m_portlet_tools_1">
+<div class="m-portlet m-portlet--metal m-portlet--head-solid-bg m-portlet--head-sm" m-portlet="true" id="m_portlet_tools_1">
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
 			<div class="m-portlet__head-title">
@@ -51,7 +50,7 @@
 				</div>
 			</div>
 			<div class="col-xl-6">
-				&nbsp;
+				Fecha Almacenaje
 			</div>
 			<div class="col-xl-6">
 				<div class="form-group m-form__group row">
@@ -71,20 +70,20 @@
 		<div class="m-portlet__head-caption">
 			<div class="m-portlet__head-title">
 				<h3 class="m-portlet__head-text">
-					Listado
+					Detalle
 				</h3>
 			</div>
 		</div>
 		<div class="m-portlet__head-tools">
 			<ul class="nav nav-tabs m-tabs-line m-tabs-line--right" role="tablist">
 				<li class="nav-item m-tabs__item">
-					<a class="nav-link m-tabs__link active" data-toggle="tab" href="#seccion-bodega" role="tab">
-						<i class="flaticon-open-box"></i> Bodega
+					<a class="nav-link m-tabs__link active" data-toggle="tab" href="#seccion-lista" role="tab">
+						<i class="flaticon-list-3"></i> Lista
 					</a>
 				</li>
 				<li class="nav-item m-tabs__item">
-					<a class="nav-link m-tabs__link" data-toggle="tab" href="#seccion-lista" role="tab">
-						<i class="flaticon-list-3"></i> Lista
+					<a class="nav-link m-tabs__link" data-toggle="tab" href="#seccion-bodega" role="tab">
+						<i class="flaticon-open-box"></i> Bodega
 					</a>
 				</li>
 			</ul>
@@ -92,10 +91,7 @@
 	</div>
 	<div class="m-portlet__body">
 		<div class="tab-content">
-			<div class="tab-pane active" id="seccion-bodega" role="tabpanel">
-				<div id="bodega"></div>
-			</div>
-			<div class="tab-pane" id="seccion-lista" role="tabpanel">
+			<div class="tab-pane active" id="seccion-lista" role="tabpanel">
 				<!--begin: Search Form -->
 				<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 					<div class="row align-items-center">
@@ -115,6 +111,9 @@
 				</div>
 				<!--end: Search Form -->
 				<div class="m_datatable" id="lista-existencia"></div>
+			</div>
+			<div class="tab-pane" id="seccion-bodega" role="tabpanel">
+				<div id="seccion-bodega"></div>
 			</div>
 		</div>
 	</div>
