Incorporadas Vistas de Enlace y Clasificacion

--- a/3 - Proyecto/Despacho/WebApp/Views/Clasificacion/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Clasificacion/Index.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
-	ViewBag.Title = "Despacho - Tipos de Solicitudes";
+	ViewBag.Title = "Despacho-Clasificaciones";
 	ViewBag.SeccionTieneTitulo = true;
-	ViewBag.TituloSeccion = "Tipos de Solicitudes";
+	ViewBag.TituloSeccion = "Clasificación";
 }
-
 @section Less{
-	<link rel="stylesheet/less" type="text/css" href="~/Content/less/tiposolicitud.less" />
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/clasificacion.less" />
 }
-
 @section Scripts{
-	@Scripts.Render("~/bundles/tiposolicitud")
-	<!--<script type="text/javascript" src="~/Content/js/TipoSolicitud.js"></script>-->
-}
+	@Scripts.Render("~/bundles/clasificacion")
+})
+
 <div class="m-portlet m-portlet--mobile">
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
@@ -30,7 +28,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscartiposolicitud">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarclasificacion">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
@@ -39,7 +37,7 @@
 					</div>
 				</div>
 				<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-					<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+					<a href="/Clasificacion/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
 						<span>
 							<i class="flaticon-add"></i>
 							<span>Crear</span>
@@ -51,9 +49,8 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="listasolicitudes"></div>
+		<div class="m_datatable" id="listaclasificacion"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
 
-<!--@Scripts.Render("~/bundles/tiposolicitud")-->
