--- a/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/Index.cshtml
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="col-xl-4 order-1 order-xl-2 m--align-right">
-          <a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+          <a href="/EstadoEquipo/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
             <span>
               <i class="flaticon-add"></i>
               <span>Crear</span>
