--- a/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Existencia/Index.cshtml
@@ -11,7 +11,9 @@
 
 @section Scripts {
 	<script src="~/Content/librerias/metronic/assets/themes/default/custom/crud/forms/widgets/select2.js" type="text/javascript"></script>
+	<script src="~/Content/js/Existencia.js" type="text/javascript"></script>
 }
+
 <div class="m-portlet m-portlet--metal m-portlet--head-solid-bg m-portlet--head-sm" m-portlet="true" id="m_portlet_tools_1">
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
