--- a/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
@@ -1,52 +1,168 @@
 ﻿@{
-    ViewBag.Title = "Despacho - Solicitud";
-    ViewBag.SeccionTieneTitulo = true;
-    ViewBag.TituloSeccion = "Solicitudes de Despacho";
-    ViewBag.Pagina = 1;
+	ViewBag.Title = "Despacho - Solicitud";
+	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.TituloSeccion = "Solicitudes de Despacho";
+	ViewBag.Pagina = 1;
+
+	List<Datos.Modelo.TipoSolicitud> tipos = Datos.Datos.TipoSolicitud.ObtenerTiposSolicitudes();
+	List<Datos.Modelo.EstadoEquipo> estadosEquipos = Datos.Datos.EstadoEquipo.ObtenerEstadosEquipos();
+	List<Datos.Modelo.EstadoSolicitud> estadosSolicitudes = Datos.Datos.EstadoSolicitud.ObtenerEstadosSolicitudes();
 }
 
-<div class="m-portlet m-portlet--mobile">
-    <div class="m-portlet__head">
-        <div class="m-portlet__head-caption">
-            <div class="m-portlet__head-title">
-                <h3 class="m-portlet__head-text">
-                    Listado
-                </h3>
-            </div>
-        </div>
-    </div>
-    <div class="m-portlet__body">
-        <!--begin: Search Form -->
-        <div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-          <div class="row align-items-center">
-            <div class="col-xl-8 order-2 order-xl-1">
-              <div class="form-group m-form__group row align-items-center">
-                <div class="col-md-4">
-                  <div class="m-input-icon m-input-icon--left">
-                    <input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarCliente">
-                    <span class="m-input-icon__icon m-input-icon__icon--left">
-                        <span><i class="la la-search"></i></span>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4 order-1 order-xl-2 m--align-right">
-              <a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-                <span>
-                  <i class="flaticon-add"></i>
-                  <span>Crear</span>
-                </span>
-              </a>
-              <div class="m-separator m-separator--dashed d-xl-none"></div>
-            </div>
-          </div>
-        </div>
-        <!--end: Search Form -->
-        <!--begin: Datatable -->
-        <div class="m_datatable" id="local_data"></div>
-        <!--end: Datatable -->
-    </div>
+@section Less {
+	<!--<link rel="stylesheet/less" type="text/css" href="~/Content/less/solicitud.less" />-->
+}
+
+@section Scripts {
+	<script src="~/Content/js/Solicitud.js type="text/javascript"></script>
+}
+
+<div class="m-portlet m-portlet--metal m-portlet--head-solid-bg m-portlet--head-sm" m-portlet="true" id="m_portlet_tools_1">
+	<div class="m-portlet__head">
+		<div class="m-portlet__head-caption">
+			<div class="m-portlet__head-title">
+				<span class="m-portlet__head-icon">
+					<i class="flaticon-search-magnifier-interface-symbol"></i>
+				</span>
+				<h3 class="m-portlet__head-text">
+					Filtros
+				</h3>
+			</div>
+		</div>
+		<div class="m-portlet__head-tools">
+			<ul class="m-portlet__nav">
+				<li class="m-portlet__nav-item">
+					<a href="#" id="filtro-filtrar" class="m-portlet__nav-link m-portlet__nav-link--icon">
+						<i class="la la-refresh"></i>
+					</a>
+				</li>
+				<li class="m-portlet__nav-item">
+					<a id="filtro-ocultar" href="#" m-portlet-tool="toggle" class="m-portlet__nav-link m-portlet__nav-link--icon">
+						<i class="la la-angle-down"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="m-portlet__body">
+		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+			<div class="row">
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Patente</label>
+						<div class="col-lg-8 col-sm-12">
+							<input class="form-control" id="filtro-patente" name="filtro-patente" type="text" />
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Denominacion</label>
+						<div class="col-lg-8 col-sm-12">
+							<input class="form-control" id="filtro-denominacion" name="filtro-denominacion" type="text" />
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Tipo de Solicitud</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-bin" name="filtro-bin">
+								@foreach (Datos.Modelo.TipoSolicitud tipo in tipos)
+								{
+									<option value="@tipo.Tiposolicitudid">@tipo.Descripcion</option>
+								}
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Material</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-material" name="filtro-material"></select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Estado Equipos</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-estado-equipos">
+								@foreach (Datos.Modelo.EstadoEquipo estado in estadosEquipos)
+								{
+									<option value="@estado.estadoequipoid">@estado.descripcion</option>
+								}
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Estado Solicitud</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-estado-solicitud">
+								@foreach (Datos.Modelo.EstadoSolicitud estado in estadosSolicitudes)
+								{
+									<option value="@estado.EstadoSolicitudId">@estado.Descripcion</option>
+								}
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Fecha Solicitud</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-fecha-solicitud"></select>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-@Scripts.Render("~/bundles/cliente")
+<div class="m-portlet m-portlet--mobile">
+	<div class="m-portlet__head">
+		<div class="m-portlet__head-caption">
+			<div class="m-portlet__head-title">
+				<h3 class="m-portlet__head-text">
+					Listado
+				</h3>
+			</div>
+		</div>
+	</div>
+	<div class="m-portlet__body">
+		<!--begin: Search Form -->
+		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+			<div class="row align-items-center">
+				<div class="col-xl-8 order-2 order-xl-1">
+					<div class="form-group m-form__group row align-items-center">
+						<div class="col-md-4">
+							<div class="m-input-icon m-input-icon--left">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarCliente">
+								<span class="m-input-icon__icon m-input-icon__icon--left">
+									<span><i class="la la-search"></i></span>
+								</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-4 order-1 order-xl-2 m--align-right">
+					<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+						<span>
+							<i class="flaticon-add"></i>
+							<span>Crear</span>
+						</span>
+					</a>
+					<div class="m-separator m-separator--dashed d-xl-none"></div>
+				</div>
+			</div>
+		</div>
+		<!--end: Search Form -->
+		<!--begin: Datatable -->
+		<div class="m_datatable" id="local_data"></div>
+		<!--end: Datatable -->
+	</div>
+</div>
