--- a/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Perfil/Index.cshtml
@@ -9,8 +9,7 @@
 }
 
 @section Scripts{
-	<script type="text/javascript" src="~/Content/js/Perfil.js"></script>
-	<!--Scripts.Render("~/bundles/perfil")-->
+	@Scripts.Render("~/bundles/perfil")
 }
 
 <div class="m-portlet m-portlet--mobile">
@@ -52,7 +51,7 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="listaperfiles"></div>
+		<div class="m_datatable" id="listaperfil"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
