--- a/3 - Proyecto/Despacho/WebApp/Views/Prioridad/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Prioridad/Index.cshtml
@@ -9,8 +9,8 @@
 }
 
 @section Scripts{
-	<!--@Scripts.Render("~/bundles/prioridad")-->
-	<script type="text/javascript" src="~/Content/js/Prioridad.js"></script>
+	@Scripts.Render("~/bundles/prioridad")
+	
 }
 
 <div class="m-portlet m-portlet--mobile">
