--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
@@ -12,6 +12,8 @@
 		ViewBag.Title = "Despacho - " + Model.Descripcion;
 		ViewBag.TituloSeccion = Model.Descripcion;
 	}
+
+	List<Datos.Modelo.Cliente> clientes = Datos.Datos.Cliente.ObtenerClientes();
 }
 
 @section Less{
@@ -34,9 +36,16 @@
 				<div class="col-10">
 					<input class="form-control m-input" type="text" value="@Model.Descripcion" id="descripcion" style="width: 50%">
 				</div>
+			</div>
+			<div class="form-group m-form__group row">
 				<label for="example-text-input" class="col-2 col-form-label">Cliente</label>
-				<div class="col-10">
-					<input class="form-control m-input" type="text" value="@Model.ClienteId" id="clienteid" style="width: 50%">
+				<div class="col-lg-10 col-sm-12">
+					<select class="form-control m-select2" id="clienteid" name="clienteid">
+						@foreach (Datos.Modelo.Cliente cliente in clientes)
+						{
+							<option value="@cliente.ClienteId" @(Model.ClienteId == cliente.ClienteId ? "selected" : "")>@cliente.Nombre</option>
+						}
+					</select>
 				</div>
 			</div>
 
