--- a/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Gerencia.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Gerencia.cshtml
@@ -2,16 +2,18 @@
 @{
 	ViewBag.SeccionTieneTitulo = true;
 
-	if (Model.gerenciaid == 0)
+	if (Model.Gerenciaid == 0)
 	{
 		ViewBag.Title = "Despacho - Nueva Gerencia";
 		ViewBag.TituloSeccion = "Nueva Gerencia";
 	}
 	else
 	{
-		ViewBag.Title = "Despacho - " + Model.descripcion;
-		ViewBag.TituloSeccion = Model.descripcion;
+		ViewBag.Title = "Despacho - " + Model.Descripcion;
+		ViewBag.TituloSeccion = Model.Descripcion;
 	}
+
+	List<Datos.Modelo.Cliente> clientes = Datos.Datos.Cliente.ObtenerClientes();
 }
 
 @section Less{
@@ -26,25 +28,36 @@
 	<!--begin::Form-->
 	<form class="m-form m-form--fit m-form--label-align-right">
 		<div class="m-portlet__body">
-			<input type="hidden" value="@Model.gerenciaid" id="id">
+			<input type="hidden" value="@Model.Gerenciaid" id="id">
 			<input type="hidden" value="@Model.EstaActivo" id="activo">
 
 			<div class="form-group m-form__group row">
 				<label for="example-text-input" class="col-2 col-form-label">Descripción</label>
 				<div class="col-10">
-					<input class="form-control m-input" type="text" value="@Model.descripcion" id="descripcion" style="width: 50%">
+					<input class="form-control m-input" type="text" value="@Model.Descripcion" id="descripcion" style="width: 50%">
 				</div>
 			</div>
+			<div class="form-group m-form__group row">
+				<label class="col-form-label col-lg-2 col-sm-12">Cliente</label>
+				<div class="col-lg-10 col-sm-12">
+					<select class="form-control m-select2" id="clienteid" name="clienteid">
+						@foreach (Datos.Modelo.Cliente cliente in clientes)
+						{
+							<option value="@cliente.ClienteId" @(Model.Clienteid == cliente.ClienteId ? "selected" : "")>@cliente.Nombre</option>
+						}
+					</select>
+				</div>
 
-		</div>
-		<div class="m-portlet__foot m-portlet__foot--fit">
-			<div class="m-form__actions">
-				<div class="row">
-					<div class="col-2">
-					</div>
-					<div class="col-10">
-						<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
-						<a href="/Gerencia/Index" class="btn btn-secondary">Volver</a>
+			</div>
+			<div class="m-portlet__foot m-portlet__foot--fit">
+				<div class="m-form__actions">
+					<div class="row">
+						<div class="col-2">
+						</div>
+						<div class="col-10">
+							<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
+							<a href="/Gerencia/Index" class="btn btn-secondary">Volver</a>
+						</div>
 					</div>
 				</div>
 			</div>
