--- a/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Gerencia/Index.cshtml
@@ -9,8 +9,8 @@
 }
 
 @section Scripts{
-  <!--@Scripts.Render("~/bundles/gerencia")-->
-  <script type="text/javascript" src="~/Content/js/Gerencia.js"></script>
+ @Scripts.Render("~/bundles/gerencia")
+  
 }
 
 <div class="m-portlet m-portlet--mobile">
