--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
@@ -36,6 +36,13 @@
 				</div>
 			</div>
 
+			<div class="form-group m-form__group row">
+				<label for="example-text-input" class="col-2 col-form-label">Observaciones</label>
+				<div class="col-10">
+					<textarea class="form-control m-input" type="text" id="observaciones" style="width: 50%">@Model.Observaciones</textarea>
+				</div>
+			</div>
+
 		</div>
 		<div class="m-portlet__foot m-portlet__foot--fit">
 			<div class="m-form__actions">
